Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         
         <div class="project-grid">
             <div class="project-card">
-                <a href="#" class="project-title" target="_blank">ATM-Machine-Java-OOPS</a>
+                <a href="https://github.com/adarshpatel3436/ATM-Machine-Java-OOPS" class="project-title" target="_blank">ATM-Machine-Java-OOPS</a>
                 <span class="project-status">Public</span>
                 <p class="project-description">"Java OOPs Project: ATM Machine using Classes and Objects"</p>
                 <div class="project-details">
@@ -88,7 +88,7 @@
             </div>
 
             <div class="project-card">
-                <a href="#" class="project-title" target="_blank">Decentralized-Crowdfunding-Platform</a>
+                <a href="https://github.com/adarshpatel3436/Decentralized-Crowdfunding-Platform" class="project-title" target="_blank">Decentralized-Crowdfunding-Platform</a>
                 <span class="project-status">Public</span>
                 <div class="project-details">
                     <span class="language-tag language-solidity">Solidity</span>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="project-card">
-                <a href="#" class="project-title" target="_blank">facebook-login-page-clone</a>
+                <a href="https://github.com/adarshpatel3436/facebook-login-page-clone" class="project-title" target="_blank">facebook-login-page-clone</a>
                 <span class="project-status">Public</span>
                 <p class="project-description">A simple clone of the Facebook login page using HTML & CSS.</p>
                 <div class="project-details">
@@ -107,7 +107,7 @@
             </div>
             
             <div class="project-card">
-                <a href="#" class="project-title" target="_blank">NASA-Space-Challenge</a>
+                <a href="https://github.com/adarshpatel3436/NASA-Space-Challenge" class="project-title" target="_blank">NASA-Space-Challenge</a>
                 <span class="project-status">Public</span>
                 <div class="project-details">
                     <span class="language-tag language-html">HTML</span>
