Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav>
                     <a href="#home" class="nav-link">Home</a>
                     <a href="#about" class="nav-link">My Intro</a>
-                    <a href="#projects" class="nav-link">Projects</a> <a href="#services" class="nav-link">Get In Touch</a>
+                    <a href="#projects" class="nav-link">Projects</a> <a href="#get-in-touch" class="nav-link">Get In Touch</a>
                     <a href="#contact" class="nav-link">Contact</a>
                 </nav>
             </div>
@@ -121,7 +121,7 @@
 </section>
             
 
-            <section id="services" class="page-section">
+            <section id="get-in-touch" class="page-section">
 
                 
                 <div class="get-in-touch-container">
@@ -161,4 +161,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
